--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,7 +79,6 @@
     <div class="splitter"></div>
     <!-- 正文内容部分 -->
     <div class="pageContent">
-        <!--/*@thymesVar id="token" type="java.lang.String"*/-->
         <iframe th:src="@{/salaryList}" id="mainFrame" name="mainFrame"
                 frameborder="0" width="100%"  height="100%">
         </iframe>
@@ -87,11 +86,11 @@
 
 </div>
 <!-- 底部页脚部分 -->
-<!--<div class="footer">-->
-    <!--<p class="text-center">-->
-        <!--2019 &copy; 000.-->
-    <!--</p>-->
-<!--</div>-->
+<div class="footer">
+    <p class="text-center">
+        2019 &copy; tgcareer.
+    </p>
+</div>
 
 <script type="text/javascript">
     $(".nav li").click(function() {
