--- a/src/main/resources/templates/salaryPost.html
+++ b/src/main/resources/templates/salaryPost.html
@@ -8,12 +8,45 @@
     <script th:src="@{/static/bootstrap-3.3.7-dist/js/bootstrap.min.js}" type="text/javascript"></script>
 </head>
 <body>
-<div class="text-center">
+<!--<div class="text-center">-->
+    <!--<form enctype="multipart/form-data" id="excelUpload"  th:action="@{/upload}" method="post" class="form-horizontal">-->
+        <!--&lt;!&ndash;<button id="uploadEventBtn" type="button" >选择文件</button>&ndash;&gt;-->
+        <!--<input class="file" type="file" name="file" id="uploadEventFile" placeholder="请选择excel.xls表">-->
+        <!--&lt;!&ndash;<input id="uploadEventPath"  disabled="disabled"  type="text" placeholder="请选择excel.xls表"  >&ndash;&gt;-->
+        <!--<button type="button" class="btn btn-primary" onclick="project.uploadBtn()" >上传</button>-->
+    <!--</form>-->
+<!--</div>-->
+<div class="panel panel-success">
+    <div class="panel-heading">
+        <h3 class="panel-title">薪资上传注意事项</h3>
+    </div>
+    <div class="panel-body">
+        <p class="text-success">由于JXL问题,目前只支持.xls格式的Excel文件。</p>
+        <p class="text-success">上传的.xls的Excel文件格式如下:</p>
+    </div>
+    <table class="table">
+        <th>序号</th>
+        <th>城市</th>
+        <th>职位</th>
+        <th>公司</th>
+        <th>联系方式</th>
+        <tr><td>1</td><td>北京</td><td>产品经理</td><td>北京XX科技有限公司</td><td>12345@gmail.com</td></tr>
+        <tr><td>2</td><td>上海</td><td>技术总监</td><td>上海XX有限公司</td><td>131XXXX4321</td></tr>
+    </table>
+</div>
+<div class="form-group">
     <form enctype="multipart/form-data" id="excelUpload"  th:action="@{/upload}" method="post" class="form-horizontal">
-        <!--<button id="uploadEventBtn" type="button" >选择文件</button>-->
-        <input class="file" type="file" name="file" id="uploadEventFile" placeholder="请选择excel.xls表">
-        <!--<input id="uploadEventPath"  disabled="disabled"  type="text" placeholder="请选择excel.xls表"  >-->
-        <button type="button" class="btn btn-primary" onclick="project.uploadBtn()" >上传</button>
+    <div class="col-sm-3 control-label">选择文件</div>
+    <div class="col-sm-4">
+        <div class="input-group">
+            <input id='location' class="form-control" onclick="$('#i-file').click();">
+            <label class="input-group-btn">
+                <input type="button" id="i-check" value="浏览文件" class="btn btn-primary" onclick="$('#i-file').click();">
+            </label>
+        </div>
+    </div>
+    <input type="file" name="file" id='i-file'  accept=".xls" onchange="$('#location').val($('#i-file').val());" style="display: none">
+    <button type="button" class="btn btn-primary" onclick="project.uploadBtn()" >上传Excel</button>
     </form>
 </div>
 <script type="text/javascript">
@@ -28,22 +61,23 @@
         this.init = function(){
 
             //模拟上传excel
-            $("#uploadEventBtn").unbind("click").bind("click",function(){
-                $("#uploadEventFile").click();
-            });
-            $("#uploadEventFile").bind("change",function(){
-                $("#uploadEventPath").attr("value",$("#uploadEventFile").val());
-            });
+//            $("#uploadEventBtn").unbind("click").bind("click",function(){
+//                $("#uploadEventFile").click();
+//            });
+//            $("#uploadEventFile").bind("change",function(){
+//                $("#uploadEventPath").attr("value",$("#uploadEventFile").val());
+//            });
         };
         //点击上传按钮
         this.uploadBtn = function(){
-            var uploadEventFile = $("#uploadEventFile").val();
+            var uploadEventFile = $("#i-file").val();
             if(uploadEventFile === ''){
                 alert("请选择excel.xls,再上传");
             }else if(uploadEventFile.lastIndexOf(".xls")<0 || !(uploadEventFile.lastIndexOf(".xlsx")<0)){//可判断以.xls结尾的excel
                 alert("只能上传Excel.xls文件");
             }else{
                 var url = '/tgcareer/upload';
+//                console.log(new FormData($('form')[0]));
                 var formData = new FormData($('form')[0]);
                 project.sendAjaxRequest(url,formData);
             }
