--- a/src/main/resources/templates/salaryPost.html
+++ b/src/main/resources/templates/salaryPost.html
@@ -22,7 +22,7 @@
     </div>
     <div class="panel-body">
         <p class="text-success">由于JXL问题,目前只支持.xls格式的Excel文件。</p>
-        <p class="text-success">上传的.xls的Excel文件格式如下:</p>
+        <p class="text-success">上传的.xls的Excel文件格式如下所示:</p>
     </div>
     <table class="table">
         <th>序号</th>
