--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,13 +37,13 @@
         <ul class="nav nav-stacked nav-pills">
             <!--/*@thymesVar id="token" type="java.lang.String"*/-->
             <li role="presentation">
-                <a th:href="@{/salaryList}" target="mainFrame" >薪资列表</a>
+                <a th:href="@{/salaryList}" target="mainFrame" >职位列表</a>
             </li>
             <li role="presentation">
                 <a th:href="@{userList}" target="mainFrame">用户列表</a>
             </li>
             <li role="presentation">
-                <a th:href="@{/salaryPost}" target="mainFrame">薪资上传</a>
+                <a th:href="@{/salaryPost}" target="mainFrame">职位上传</a>
             </li>
             <li role="presentation">
                 <a th:href="@{/userDownload}" target="mainFrame">用户下载</a>
