--- a/src/main/resources/templates/salaryPost.html
+++ b/src/main/resources/templates/salaryPost.html
@@ -30,8 +30,9 @@
         <th>职位</th>
         <th>公司</th>
         <th>联系方式</th>
-        <tr><td>1</td><td>北京</td><td>产品经理</td><td>北京XX科技有限公司</td><td>12345@gmail.com</td></tr>
-        <tr><td>2</td><td>上海</td><td>技术总监</td><td>上海XX有限公司</td><td>131XXXX4321</td></tr>
+        <th>发布时间</th>
+        <tr><td>1</td><td>北京</td><td>产品经理</td><td>北京XX科技有限公司</td><td>12345@gmail.com</td><td>2019/04/06</td></tr>
+        <tr><td>2</td><td>上海</td><td>技术总监</td><td>上海XX有限公司</td><td>131XXXX4321</td><td>2019/04/07</td></tr>
     </table>
 </div>
 <div class="form-group">
