--- a/src/main/resources/static/bootstrap-3.3.7-dist/css/login.css
+++ b/src/main/resources/static/bootstrap-3.3.7-dist/css/login.css
@@ -2,7 +2,7 @@
     margin: 0;padding: 0;list-style: none;
 }
 body{
-    background: url('../img/loginBg.jpg') ;
+    /*background: url('../img/loginBg.jpg') ;*/
     background-size: 110%;
     background-repeat: no-repeat;
     background-attachment: fixed;
