--- a/src/main/resources/templates/salaryList.html
+++ b/src/main/resources/templates/salaryList.html
@@ -11,7 +11,7 @@
 <div class="panel panel-default">
 
 <!-- Default panel contents -->
-<div class="panel-heading text-center"><strong>小程序薪资信息</strong></div>
+<div class="panel-heading text-center"><strong>小程序职位信息</strong></div>
 
 <!-- Table -->
 <table class="table table-bordered table-striped text-center ">
